a bunch of stuff

--- a/experiences.html
+++ b/experiences.html
@@ -9,16 +9,16 @@
     <meta name="description" content="All of actuallyaridan (Adnan Bukvic)'s work and school experience on one page">
     <meta name="keywords" content="experience, adnan bukvic, actuallyaridan">
     <meta name="author" content="Adnan Bukvic">
-    <link href="src/styles/styles.css" rel="stylesheet">
-    <script src="src/scripts/settings.js"></script>
-    <script src="src/scripts/dropDownMenu.js"></script>
-    <script src="src/scripts/mobileMenu.js"></script>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="src/favicons/apple-touch-icon.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="/src/favicons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="src/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="src/favicons/favicon-16x16.png">
-    <link rel="manifest" href="src/favicons/site.webmanifest">
+    <link href="/src/styles/styles.css" rel="stylesheet">
+    <script src="/src/scripts/settings.js"></script>
+    <script src="/src/scripts/dropDownMenu.js"></script>
+    <script src="/src/scripts/mobileMenu.js"></script>
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
+    <link rel="manifest" href="/src/favicons/site.webmanifest">
 
 </head>
 
@@ -27,34 +27,37 @@
         <nav>
             <div class="navWrapper">
                 <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/house.svg"> Home</a>
+                        src="/src/images/emojis/house.svg"> Home</a>
                 <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/brain.svg"> Experiences</a>
+                        src="/src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/tools.svg"> Projects</a>
+                        src="/src/images/emojis/tools.svg"> Projects</a>
                 <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/game.svg"> Minecraft</a>
+                        src="/src/images/emojis/game.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Contact</a>
+                        src="/src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/setttings.svg"> Settings</a>
+                        src="/src/images/emojis/setttings.svg"> Settings</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
+                <button onclick="toggleMenu()" class="navButton">
+                    <img src="/src/images/icons/menu.svg" class="emoji">
+                    Menu
+                </button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/house.svg"> Home</a>
+                        src="/src/images/emojis/house.svg"> Home</a>
                 <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/brain.svg"> Experiences</a>
+                        src="/src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/tools.svg"> Projects</a>
+                        src="/src/images/emojis/tools.svg"> Projects</a>
                 <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/game.svg"> Minecraft</a>
+                        src="/src/images/emojis/game.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Contact</a>
+                        src="/src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/setttings.svg"> Settings</a>
+                        src="/src/images/emojis/setttings.svg"> Settings</a>
             </div>
         </nav>
     </header>
@@ -93,13 +96,13 @@
                                         there!</p>
                                     <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/clock.svg"><br> Nov 2022 - Oct 2023
+                                                src="/src/images/emojis/clock.svg"><br> Nov 2022 - Oct 2023
                                         </p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/link.svg"><br> <a href="https://itcarestore.se"
+                                                src="/src/images/emojis/link.svg"><br> <a href="https://itcarestore.se"
                                                 target="_blank">itcarestore.se</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br> Web Development <br>Customer
+                                                src="/src/images/emojis/teacher.svg"><br> Web Development <br>Customer
                                             Service <br>Tech Repairs</p>
                                     </div>
                                 </div>
@@ -115,13 +118,13 @@
                                     </p>
                                     <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/clock.svg"><br> Aug 2020 - Jun 2023
+                                                src="/src/images/emojis/clock.svg"><br> Aug 2020 - Jun 2023
                                         </p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/link.svg"><br> <a href="https://teknikum.se"
+                                                src="/src/images/emojis/link.svg"><br> <a href="https://teknikum.se"
                                                 target="_blank">teknikum.se</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br>Networking <br>Computers<br> Web
+                                                src="/src/images/emojis/teacher.svg"><br>Networking <br>Computers<br> Web
                                             Development <br>Electronics</p>
                                     </div>
                                 </div>
