--- a/projects.html
+++ b/projects.html
@@ -9,16 +9,16 @@
     <meta name="description" content="All of actuallyaridan (Adnan Bukvic)'s projects on one page">
     <meta name="keywords" content="projects, adnan bukvic, actuallyaridan">
     <meta name="author" content="Adnan Bukvic">
-    <link href="src/styles/styles.css" rel="stylesheet">
-    <script src="src/scripts/settings.js"></script>
-    <script src="src/scripts/dropDownMenu.js"></script>
-    <script src="src/scripts/mobileMenu.js"></script>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="src/favicons/apple-touch-icon.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="/src/favicons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="src/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="src/favicons/favicon-16x16.png">
-    <link rel="manifest" href="src/favicons/site.webmanifest">
+    <link href="/src/styles/styles.css" rel="stylesheet">
+    <script src="/src/scripts/settings.js"></script>
+    <script src="/src/scripts/dropDownMenu.js"></script>
+    <script src="/src/scripts/mobileMenu.js"></script>
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
+    <link rel="manifest" href="/src/favicons/site.webmanifest">
 </head>
 
 <body class="boxAlignment ">
@@ -26,34 +26,37 @@
         <nav>
             <div class="navWrapper">
                 <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/house.svg"> Home</a>
+                        src="/src/images/emojis/house.svg"> Home</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/brain.svg"> Experiences</a>
+                        src="/src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/tools.svg"> Projects</a>
+                        src="/src/images/emojis/tools.svg"> Projects</a>
                         <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
-                            src="src/images/emojis/game.svg"> Minecraft</a>
+                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Contact</a>
+                        src="/src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/setttings.svg"> Settings</a>
+                        src="/src/images/emojis/setttings.svg"> Settings</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
+                <button onclick="toggleMenu()" class="navButton">
+                    <img src="/src/images/icons/menu.svg" class="emoji">
+                    Menu
+                </button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/house.svg"> Home</a>
+                        src="/src/images/emojis/house.svg"> Home</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/brain.svg"> Experiences</a>
+                        src="/src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/tools.svg"> Projects</a>
+                        src="/src/images/emojis/tools.svg"> Projects</a>
                         <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
-                            src="src/images/emojis/game.svg"> Minecraft</a>
+                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Contact</a>
+                        src="/src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/setttings.svg"> Settings</a>
+                        src="/src/images/emojis/setttings.svg"> Settings</a>
             </div>
         </nav>
     </header>
@@ -69,7 +72,7 @@
                                     <p class="subTitle">I have a bunch of projects that I work on now and then. Some of them
                                         are technical projects and some others have to do with software and/or websites. Why
                                         don't you check them out? I'm sure you'll like them! I had fun making them at least!
-                                        <img draggable="false" class="emoji" alt="" src="src/images/emojis/happy.svg"></p>
+                                        <img draggable="false" class="emoji" alt="" src="/src/images/emojis/happy.svg"></p>
                                 </div>
                                 <div class="project">
                                     <p class="projectName">This website (aridan.net)</p>
@@ -79,15 +82,15 @@
                                     <div>
                                         <p class="projectStatus WIP">Work in progress</p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/link.svg"><br> <a
+                                                src="/src/images/emojis/link.svg"><br> <a
                                                 href="https://aridan.net" target="_blank">aridan.net</a></p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/link.svg"><br> <a
+                                                src="/src/images/emojis/link.svg"><br> <a
                                                 href="https://github.com/actuallyaridan/aridan.net" target="_blank">GitHub</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br> HTML, CSS, JavaScript</p>
+                                                src="/src/images/emojis/teacher.svg"><br> HTML, CSS, JavaScript</p>
                                         <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/judge.svg"><br> MIT license</p>
+                                                src="/src/images/emojis/judge.svg"><br> MIT license</p>
                                     </div>
                                 </div>
                                 <div class="project">
@@ -96,12 +99,12 @@
                                     <div>
                                         <p class="projectStatus WIP">Work in progress</p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/link.svg"><br> <a
+                                                src="/src/images/emojis/link.svg"><br> <a
                                                 href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv" target="_blank">GitHub</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br> i8n technology</p>
+                                                src="/src/images/emojis/teacher.svg"><br> i8n technology</p>
                                         <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/judge.svg"><br> Owned by <a
+                                                src="/src/images/emojis/judge.svg"><br> Owned by <a
                                                 href="https://dimden.dev" target="_blank">dimden</a></p>
                                     </div>
                                 </div>
@@ -113,7 +116,7 @@
                                     <div>
                                         <p class="projectStatus completed">Completed</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br> Electronics modification</p>
+                                                src="/src/images/emojis/teacher.svg"><br> Electronics modification</p>
                                     </div>
                                 </div>
                                 <div class="project">
@@ -124,7 +127,7 @@
                                     <div>
                                         <p class="projectStatus completed">Completed</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br> Software</p>
+                                                src="/src/images/emojis/teacher.svg"><br> Software</p>
                                     </div>
                                 </div>
                             </div>
