--- a/sv/contact.html
+++ b/sv/contact.html
@@ -4,19 +4,21 @@
 <head>
     <meta charset="utf-8">
     <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
-    <script src="../src/scripts/twimojiFix.js"></script>
+    <script src="/src/scripts/twimojiFix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#161616">
     <title>Kontakt — actuallyaridan</title>
-    <link href="../src/styles/styles.css" rel="stylesheet">
-    <script src="../src/scripts/settings.js"></script>
-    <script src="../src/scripts/dropDownMenu.js"></script>
-    <script src="../src/scripts/mobileMenu.js"></script>
-    <script src="../src/scripts/emailModalBox.js"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="../src/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../src/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../src/favicons/favicon-16x16.png">
-    <link rel="manifest" href="../src/favicons/site.webmanifest">
+    <link href="/src/styles/styles.css" rel="stylesheet">
+    <script src="/src/scripts/settings.js"></script>
+    <script src="/src/scripts/dropDownMenu.js"></script>
+    <script src="/src/scripts/mobileMenu.js"></script>
+    <script src="/src/scripts/emailModalBox.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
+    <link rel="manifest" href="/src/favicons/site.webmanifest">
 </head>
 
 <body class="boxAlignment ">
@@ -24,30 +26,30 @@
         <nav>
             <div class="navWrapper">
                 <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/house.svg"> Hem</a>
+                        src="/src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/brain.svg"> Erfarenhet</a>
+                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/tools.svg"> Projekt</a>
+                        src="/src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/speak.svg"> Kontakt</a>
+                        src="/src/images/emojis/speak.svg"> Kontakt</a>
                 <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/setttings.svg"> Inställningar</a>
+                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/house.svg"> Hem</a>
+                        src="/src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/brain.svg"> Erfarenhet</a>
+                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/tools.svg"> Projekt</a>
+                        src="/src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/speak.svg"> Kontakt</a>
+                        src="/src/images/emojis/speak.svg"> Kontakt</a>
                 <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/setttings.svg"> Inställningar</a>
+                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
         </nav>
     </header>
