--- a/sv/projects.html
+++ b/sv/projects.html
@@ -9,17 +9,19 @@
     <meta name="description" content="All of actuallyaridan (Adnan Bukvic)'s projects on one page">
     <meta name="keywords" content="projects, adnan bukvic, actuallyaridan">
     <meta name="author" content="Adnan Bukvic">
-    <link href="../src/styles/styles.css" rel="stylesheet">
-    <script src="../src/scripts/settings.js"></script>
-    <script src="../src/scripts/dropDownMenu.js"></script>
-    <script src="../src/scripts/mobileMenu.js"></script>
-    <script src="../src/scripts/emailModalBox.js"></script>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../src/favicons/apple-touch-icon.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="../src/favicons/favicon-32x32.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="../src/favicons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../src/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../src/favicons/favicon-16x16.png">
-    <link rel="manifest" href="../src/favicons/site.webmanifest">
+    <link href="/src/styles/styles.css" rel="stylesheet">
+    <script src="/src/scripts/settings.js"></script>
+    <script src="/src/scripts/dropDownMenu.js"></script>
+    <script src="/src/scripts/mobileMenu.js"></script>
+    <script src="/src/scripts/emailModalBox.js"></script>
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="/src/favicons/favicon-16x16.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
+    <link rel="manifest" href="/src/favicons/site.webmanifest">
 </head>
 
 <body class="boxAlignment ">
@@ -27,30 +29,30 @@
         <nav>
             <div class="navWrapper">
                 <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/house.svg"> Hem</a>
+                        src="/src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/brain.svg"> Erfarenhet</a>
+                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
                 <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/tools.svg"> Projekt</a>
+                        src="/src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/speak.svg"> Kontakt</a>
+                        src="/src/images/emojis/speak.svg"> Kontakt</a>
                 <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/setttings.svg"> Inställningar</a>
+                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/house.svg"> Hem</a>
+                        src="/src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/brain.svg"> Erfarenhet</a>
+                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
                 <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/tools.svg"> Projekt</a>
+                        src="/src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/speak.svg"> Kontakt</a>
+                        src="/src/images/emojis/speak.svg"> Kontakt</a>
                 <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/setttings.svg"> Inställningar</a>
+                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
         </nav>
     </header>
@@ -65,7 +67,7 @@
                                 av dem är tekniska och andra är mjukvarurelaterade eller webbsidor och liknande. Ta och
                                 kika på dem! Jag slår vad att du kommer gilla i alla fall en av dem. I vilket fall så
                                 hade jag kul när jag skapade dem!
-                                <img draggable="false" class="emoji" alt="" src="../src/images/emojis/happy.svg">
+                                <img draggable="false" class="emoji" alt="" src="/src/images/emojis/happy.svg">
                             </p>
                             <div class="project">
                                 <p class="projectName">Den där webbsidan (aridan.net)</p>
@@ -73,16 +75,16 @@
                                 <div>
                                     <p class="projectStatus WIP">Pågår</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="../src/images/emojis/link.svg"> <a href="https://aridan.net"
+                                            src="/src/images/emojis/link.svg"> <a href="https://aridan.net"
                                             target="_blank">aridan.net</a></p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="../src/images/emojis/link.svg"> <a
+                                            src="/src/images/emojis/link.svg"> <a
                                             href="https://github.com/actuallyaridan/aridan.net"
                                             target="_blank">GitHub</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="../src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
+                                            src="/src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
                                     <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                            src="../src/images/emojis/judge.svg"> MIT licensen</p>
+                                            src="/src/images/emojis/judge.svg"> MIT licensen</p>
                                 </div>
                             </div>
                             <div class="project">
@@ -91,14 +93,14 @@
                                 <div>
                                     <p class="projectStatus WIP">Pågår</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="../src/images/emojis/link.svg"> <a
+                                            src="/src/images/emojis/link.svg"> <a
                                             href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv"
                                             target="_blank">GitHub</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="../src/images/emojis/teacher.svg"> Översättnings-teknologi
+                                            src="/src/images/emojis/teacher.svg"> Översättnings-teknologi
                                     </p>
                                     <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                            src="../src/images/emojis/judge.svg"> Ägs by <a href="https://dimden.dev"
+                                            src="/src/images/emojis/judge.svg"> Ägs by <a href="https://dimden.dev"
                                             target="_blank">dimden</a></p>
                                 </div>
                             </div>
@@ -108,7 +110,7 @@
                                 <div>
                                     <p class="projectStatus completed">Färdigt</p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="../src/images/emojis/teacher.svg"> Modifiering av elektronik</p>
+                                            src="/src/images/emojis/teacher.svg"> Modifiering av elektronik</p>
                                 </div>
                             </div>
                             <div class="project">
@@ -117,7 +119,7 @@
                                     <div>
                                         <p class="projectStatus completed">Färdigt</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="../src/images/emojis/teacher.svg"> Modifiering av elektronik</p>
+                                                src="/src/images/emojis/teacher.svg"> Modifiering av elektronik</p>
                                     </div>
                             </div>
                             <div class="project">
@@ -126,7 +128,7 @@
                                     <div>
                                         <p class="projectStatus completed">Färdigt</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="../src/images/emojis/teacher.svg"> Modifiering av elektronik</p>
+                                                src="/src/images/emojis/teacher.svg"> Modifiering av elektronik</p>
                                     </div>
                             </div>
                             <div class="project">
@@ -135,7 +137,7 @@
                                     <div>
                                         <p class="projectStatus completed">Färdigt</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="../src/images/emojis/teacher.svg"> Mjukvara</p>
+                                                src="/src/images/emojis/teacher.svg"> Mjukvara</p>
                                     </div>
                             </div>
                         </div>
