--- a/contact.html
+++ b/contact.html
@@ -9,17 +9,17 @@
     <meta name="description" content="Contact actuallyaridan (Adnan Bukvic) with ease">
     <meta name="keywords" content="contact, adnan bukvic, actuallyaridan">
     <meta name="author" content="Adnan Bukvic">
-    <link href="src/styles/styles.css" rel="stylesheet">
-    <script src="src/scripts/settings.js"></script>
-    <script src="src/scripts/dropDownMenu.js"></script>
-    <script src="src/scripts/mobileMenu.js"></script>
-    <script src="src/scripts/emailModalBox.js"></script>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="src/favicons/apple-touch-icon.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="/src/favicons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="src/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="src/favicons/favicon-16x16.png">
-    <link rel="manifest" href="src/favicons/site.webmanifest">
+    <link href="/src/styles/styles.css" rel="stylesheet">
+    <script src="/src/scripts/settings.js"></script>
+    <script src="/src/scripts/dropDownMenu.js"></script>
+    <script src="/src/scripts/mobileMenu.js"></script>
+    <script src="/src/scripts/emailModalBox.js"></script>
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
+    <link rel="manifest" href="/src/favicons/site.webmanifest">
 </head>
 
 <body class="boxAlignment ">
@@ -27,34 +27,37 @@
         <nav>
             <div class="navWrapper">
                 <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/house.svg"> Home</a>
+                        src="/src/images/emojis/house.svg"> Home</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/brain.svg"> Experiences</a>
+                        src="/src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/tools.svg"> Projects</a>
+                        src="/src/images/emojis/tools.svg"> Projects</a>
                         <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
-                            src="src/images/emojis/game.svg"> Minecraft</a>
+                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Contact</a>
+                        src="/src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/setttings.svg"> Settings</a>
+                        src="/src/images/emojis/setttings.svg"> Settings</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
+                <button onclick="toggleMenu()" class="navButton">
+                    <img src="/src/images/icons/menu.svg" class="emoji">
+                    Menu
+                </button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/house.svg"> Home</a>
+                        src="/src/images/emojis/house.svg"> Home</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/brain.svg"> Experiences</a>
+                        src="/src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/tools.svg"> Projects</a>
+                        src="/src/images/emojis/tools.svg"> Projects</a>
                         <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
-                            src="src/images/emojis/game.svg"> Minecraft</a>
+                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Contact</a>
+                        src="/src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/setttings.svg"> Settings</a>
+                        src="/src/images/emojis/setttings.svg"> Settings</a>
             </div>
         </nav>
     </header>
