--- a/sv/settings.html
+++ b/sv/settings.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#161616">
     <title>Inställningar — actuallyaridan</title>
-    <link href="../src/styles/styles.css" rel="stylesheet">
-    <script src="../src/scripts/settings.js"></script>
-    <script src="../src/scripts/dropDownMenu.js"></script>
-    <script src="../src/scripts/mobileMenu.js"></script>
-    <script src="../src/scripts/emailModalBox.js"></script>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../src/favicons/apple-touch-icon.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="../src/favicons/favicon-32x32.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="../src/favicons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../src/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../src/favicons/favicon-16x16.png">
-    <link rel="manifest" href="../src/favicons/site.webmanifest">
+    <link href="/src/styles/styles.css" rel="stylesheet">
+    <script src="/src/scripts/settings.js"></script>
+    <script src="/src/scripts/dropDownMenu.js"></script>
+    <script src="/src/scripts/mobileMenu.js"></script>
+    <script src="/src/scripts/emailModalBox.js"></script>
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="/src/favicons/favicon-16x16.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
+    <link rel="manifest" href="/src/favicons/site.webmanifest">
 </head>
 
 <body class=" settings">
@@ -24,36 +26,36 @@
         <nav>
             <div class="navWrapper">
                 <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/house.svg"> Hem</a>
+                        src="/src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/brain.svg"> Erfarenhet</a>
+                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/tools.svg"> Projekt</a>
+                        src="/src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/speak.svg"> Kontakt</a>
+                        src="/src/images/emojis/speak.svg"> Kontakt</a>
                 <a class="navButton activeChoice right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/setttings.svg"> Inställningar</a>
+                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/house.svg"> Hem</a>
+                        src="/src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/brain.svg"> Erfarenhet</a>
+                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/tools.svg"> Projekt</a>
+                        src="/src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/speak.svg"> Kontakt</a>
+                        src="/src/images/emojis/speak.svg"> Kontakt</a>
                 <a class="navButton activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="../src/images/emojis/setttings.svg"> Inställningar</a>
+                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
         </nav>
     </header>
     <main class="settings">
         <h1>Inställningar</h1>
-        <form id="settings" action="../src/scripts/settings.js">
+        <form id="settings" action="/src/scripts/settings.js">
             <div class="settingGroup">
                 <p>Innehåll du ser</p>
                 <div class="setting">
